tests/success/write_binary_stdout.msh
`stdin_redirect_binary.bin` readFileBytes w
