tests/fail/write_binary_wle_error.msh
`stdin_redirect_binary.bin` readFileBytes wle
